[project]
name = "comfyui-advanced-pocket-tts"
description = "Advanced CPU-based Text-to-Speech nodes for ComfyUI with full parameter control. Forked from ai-joe-git/ComfyUI-Pocket-TTS. Supports temperature, decode steps, EOS threshold, quantization, voice cloning, and 13 language models."
version = "1.0.4"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/scofano/ComfyUI-Pocket-TTS-V2"
Original = "https://github.com/ai-joe-git/ComfyUI-Pocket-TTS"

[tool.comfy]
PublisherId = "dansco"
DisplayName = "Advanced Pocket TTS"
Icon = ""
